--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lihezaiwu-frontend",
+  "name": "",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Nexoi/lihezaiwu-frontend"
+    "url": ""
   },
   "author": "",
   "license": "MIT",
